--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&amp;display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
-    /* التنسيقات كما هي تمامًا */
     :root {
       --primary: #0066cc;
       --secondary: #004d99;
@@ -101,33 +100,36 @@
       font-weight: 600;
     }
 
-    #friendsList {
-      list-style: none;
-      padding: 10px 15px;
-      margin-top: 10px;
-      color: #cce7ff;
+    /* جدول الإحالات */
+    .referrals-table {
+      width: 100%;
+      margin-top: 12px;
+      border-collapse: collapse;
       font-size: 15px;
-      max-height: 180px;
-      overflow-y: auto;
-      background-color: rgba(0, 51, 102, 0.6);
-      border-radius: 8px;
-      text-align: left;
-      direction: ltr;
-      font-family: 'Cairo', sans-serif;
-      box-shadow: inset 0 0 5px rgba(255,255,255,0.1);
+      background: rgba(0,51,102,0.3);
+      color: #cce7ff;
     }
-
-    #friendsList li {
-      padding: 6px 8px;
-      border-bottom: 1px solid rgba(255,255,255,0.15);
-      font-weight: 500;
+    .referrals-table th, .referrals-table td {
+      padding: 6px 3px;
+      border: 1px solid #235;
     }
-
-    #friendsList li:last-child {
-      border-bottom: none;
+    .referrals-table th {
+      background: rgba(0,51,102,0.7);
+      color: #ff9900;
     }
+    .referrals-table tfoot td {
+      background: rgba(0,51,102,0.6);
+      font-weight: bold;
+      color: #ffd700;
+    }
+    .referrals-table td {
+      background: rgba(0,51,102,0.3);
+    }
+    .referrals-table .center {
+      text-align: center;
+    }
+    /* نهاية جدول الإحالات */
 
-    /* Loading indicator */
     #loadingIndicator {
       font-size: 14px;
       color: var(--accent);
@@ -194,7 +196,28 @@
 
       <div id="friendsCount">Friends invited: <strong>0</strong></div>
       <div id="loadingIndicator" style="display:none;">Loading friends...</div>
-      <ul id="friendsList"></ul>
+      <!-- جدول الإحالات -->
+      <div style="overflow-x:auto;">
+        <table class="referrals-table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Username</th>
+              <th>Reward</th>
+            </tr>
+          </thead>
+          <tbody id="referralsBody">
+            <!-- سيتم ملء البيانات هنا -->
+          </tbody>
+          <tfoot>
+            <tr>
+              <td colspan="2" class="center">Total</td>
+              <td id="referralsTotal" class="center">0 Mg</td>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
+      <!-- نهاية الجدول -->
     </div>
   </div>
 
@@ -315,11 +338,11 @@
                 return (currentBalance || 0) + 100;
               });
             }).catch(err => {
-              console.error('Error updating referrals:', err);
+              alert('خطأ في تحديث قائمة الإحالات: ' + err.message);
             });
           }
         }).catch(err => {
-          console.error('Error fetching referrals:', err);
+          alert('خطأ في جلب الإحالات: ' + err.message);
         });
       }
 
@@ -332,7 +355,8 @@
       const referralsRef = database.ref('users/' + referralId + '/referrals');
       const loadingIndicator = document.getElementById('loadingIndicator');
       const friendsCountElem = document.getElementById('friendsCount');
-      const friendsListElem = document.getElementById('friendsList');
+      const referralsBody = document.getElementById('referralsBody');
+      const referralsTotal = document.getElementById('referralsTotal');
 
       loadingIndicator.style.display = 'block'; // Show loading indicator
 
@@ -340,28 +364,62 @@
         loadingIndicator.style.display = 'none'; // Hide loading indicator when data arrives
         const referrals = snapshot.val() || [];
         friendsCountElem.innerHTML = `Friends invited: <strong>${referrals.length}</strong>`;
-        friendsListElem.innerHTML = '';
+
+        // تفريغ الجدول
+        referralsBody.innerHTML = '';
 
         if (referrals.length === 0) {
-          const li = document.createElement('li');
-          li.textContent = "No friends invited yet.";
-          friendsListElem.appendChild(li);
+          const tr = document.createElement('tr');
+          const td = document.createElement('td');
+          td.colSpan = 3;
+          td.style.textAlign = 'center';
+          td.textContent = "No friends invited yet.";
+          tr.appendChild(td);
+          referralsBody.appendChild(tr);
+          referralsTotal.textContent = "0 Mg";
         } else {
-          referrals.forEach((refId) => {
+          let count = 0;
+          referrals.forEach((refId, idx) => {
             database.ref('users/' + refId).once('value')
               .then(userSnap => {
                 const userData = userSnap.val();
                 const username = userData?.username || "Unknown";
-                const li = document.createElement('li');
-                li.textContent = username + ` (ID: ${refId})`;
-                friendsListElem.appendChild(li);
+                const tr = document.createElement('tr');
+                // رقم الإحالة
+                const tdNum = document.createElement('td');
+                tdNum.textContent = (idx + 1);
+                tdNum.className = 'center';
+                // اسم المستخدم
+                const tdUser = document.createElement('td');
+                tdUser.textContent = username + ` (ID: ${refId})`;
+                // المكافأة
+                const tdReward = document.createElement('td');
+                tdReward.textContent = "100 Mg";
+                tdReward.className = 'center';
+
+                tr.appendChild(tdNum);
+                tr.appendChild(tdUser);
+                tr.appendChild(tdReward);
+                referralsBody.appendChild(tr);
+
+                count++;
+                // عند آخر إحالة، ضع المجموع
+                if (count === referrals.length) {
+                  referralsTotal.textContent = (referrals.length * 100) + " Mg";
+                }
               })
               .catch(err => {
-                const li = document.createElement('li');
-                li.textContent = `Error fetching friend data (ID: ${refId})`;
-                friendsListElem.appendChild(li);
+                const tr = document.createElement('tr');
+                const td = document.createElement('td');
+                td.colSpan = 3;
+                td.textContent = `Error fetching friend data (ID: ${refId})`;
+                tr.appendChild(td);
+                referralsBody.appendChild(tr);
               });
           });
+          if (referrals.length === 0) {
+            referralsTotal.textContent = "0 Mg";
+          }
         }
       }, err => {
         loadingIndicator.style.display = 'none'; // Hide loading indicator on error
